// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: CustomButton should match snapshot 1`] = `
<View
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 14,
      },
      {
        "borderRadius": 4,
        "marginBottom": 12,
      },
      {
        "backgroundColor": "purple",
      },
      {},
      {
        "padding": 10,
      },
    ]
  }
  testID="testButton"
>
  <Text
    style={
      [
        {
          "color": "yellow",
          "fontSize": 18,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "500",
          "textAlign": "center",
        },
        [
          {
            "textAlign": "left",
          },
        ],
      ]
    }
  >
    Press me!
  </Text>
</View>
`;

exports[`Story Snapshots: DisabledButton should match snapshot 1`] = `
<View
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 14,
      },
      {
        "borderRadius": 4,
        "marginBottom": 12,
      },
      {
        "backgroundColor": "#D1EBFE",
      },
      {},
      undefined,
    ]
  }
  testID="testButton"
>
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "500",
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</View>
`;

exports[`Story Snapshots: DisabledLoadingButton should match snapshot 1`] = `
<View
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 14,
      },
      {
        "borderRadius": 4,
        "marginBottom": 12,
      },
      {
        "backgroundColor": "#D1EBFE",
      },
      {},
      undefined,
    ]
  }
  testID="testButton"
>
  <ActivityIndicator
    color="#FFFFFF"
    style={
      {
        "padding": 0,
      }
    }
  />
</View>
`;

exports[`Story Snapshots: LoadingButton should match snapshot 1`] = `
<View
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 14,
      },
      {
        "borderRadius": 4,
        "marginBottom": 12,
      },
      {
        "backgroundColor": "#D1EBFE",
      },
      {},
      undefined,
    ]
  }
  testID="testButton"
>
  <ActivityIndicator
    color="#FFFFFF"
    style={
      {
        "padding": 0,
      }
    }
  />
</View>
`;

exports[`Story Snapshots: PrimaryButton should match snapshot 1`] = `
<View
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 14,
      },
      {
        "borderRadius": 4,
        "marginBottom": 12,
      },
      {
        "backgroundColor": "#156FF5",
      },
      {},
      undefined,
    ]
  }
  testID="testButton"
>
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "500",
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</View>
`;

exports[`Story Snapshots: SecondaryButton should match snapshot 1`] = `
<View
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 14,
      },
      {
        "borderRadius": 4,
        "marginBottom": 12,
      },
      {
        "backgroundColor": "#E4E7EA",
      },
      {},
      undefined,
    ]
  }
  testID="testButton"
>
  <Text
    style={
      [
        {
          "color": "#2F343D",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "500",
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</View>
`;

exports[`Story Snapshots: SmallButton should match snapshot 1`] = `
<View
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignSelf": "center",
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      },
      {
        "borderRadius": 4,
        "marginBottom": 12,
      },
      {
        "backgroundColor": "#156FF5",
      },
      {},
      undefined,
    ]
  }
  testID="testButton"
>
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontSize": 12,
          "fontWeight": "700",
          "lineHeight": 18,
          "textAlign": "left",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</View>
`;
